Fix a style causing incorrect overflow

--- a/ext/css/search.css
+++ b/ext/css/search.css
@@ -130,7 +130,7 @@ h1 {
 .search-options {
     display: flex;
     flex-flow: row wrap;
-    margin: 0.5em -1em;
+    margin: 0.5em calc(-1 * var(--main-content-horizontal-padding));
     align-items: center;
 }
 .search-option {
